--- a/styles.css
+++ b/styles.css
@@ -100,3 +100,11 @@ button {
     transition: all 0.7s ease-in-out;
     cursor: pointer;
 }
+
+#main-container {
+    width: 800px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: auto;
+}
