--- a/styles.css
+++ b/styles.css
@@ -27,12 +27,12 @@ body, html {
     margin: 0;
     padding: 10px;
     background: var(--background);
-    color: var(--text);
+    color: whitesmoke;
     font-family: var(--font);
 }
 
 img {
-    width: 300px;
+    width: 150px;
     border-radius: calc(var(--image) * 2);
     border: 4px solid var(--text);
 }
@@ -80,6 +80,7 @@ button {
     flex-wrap: wrap;
     flex-direction: row;
     gap: 10px;
+    justify-content: center;
 }
 
 .item {
@@ -88,8 +89,8 @@ button {
     padding: 10px;
     box-sizing: border-box;
     box-shadow: 0 2px 7px rgba(0,0,0,0.8);
-    margin: 30px 20px;
-    font-size: 4rem;
+    margin: 10px 10px;
+    font-size: 1.5rem;
 }
 
 .item:hover {
@@ -107,4 +108,24 @@ button {
     flex-direction: column;
     align-items: center;
     margin: auto;
+    /* border: 2px solid var(--text); */
+    padding: 40px;
+    border-radius: 20px;
+    box-shadow: 0 0 24px rgba(255, 255, 255, 0.8);
+    margin-top: 2rem;
 }
+
+a {
+    text-decoration: u;
+    color: var(--text);
+    font-weight: bold;
+    box-sizing: border-box;
+    display: block;
+    margin: 8px 0;
+    cursor: pointer;
+    font-family: var(--font);
+    width: 160px;
+    padding: 5px 10px;
+    border-radius: var(--image);
+    background: var(--text);
+    color: var(--background);}
