--- a/solo-project-hometown/styles.css
+++ b/solo-project-hometown/styles.css
@@ -17,10 +17,13 @@ DARK BLUE: #1D3557
 }
 
 body {
-    margin: 0;
+    margin: 0 auto;
     text-align: center;
     font-family: 'Montserrat', sans-serif;
+    max-width: 900px;
+    background: linear-gradient(to bottom right, var(--light), var(--aqua));
 }
+
 
 .activities img {
     width: 100px;
@@ -30,16 +33,6 @@ body {
     display: flex;
     /* justify-content: space-between; */
     flex-wrap: nowrap;
-}
-
-#left-side {
-    max-width: 50%;
-    margin-right: 20px;
-}
-
-#right-side {
-    max-width: 50%;
-    margin-left: 20px;
 }
 
 .guide img {
@@ -77,7 +70,7 @@ body {
 }
 
 .activities {
-    background-color: var(--aqua);
+    background-color: var(--light);
     padding: 20px;
     margin-bottom: 40px;
 }
@@ -96,8 +89,8 @@ body {
 
 .activities-container img {
     border-radius: 50%;
-    width: 150px;
-    height: 150px;
+    width: 100px;
+    height: 100px;
     object-fit: cover;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.7);
 }
@@ -110,6 +103,26 @@ body {
 .activities-container p {
     margin-top: 5px;
     font-size: 14px;
-    line-height: 1.4;
-    
+    line-height: 1.4;   
 }
+
+.guide {
+    background-color: var(--aqua);
+    padding: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    width: 400px;
+    height: 200px;
+    border-radius: 20px;
+    margin: 0 auto;
+    border-bottom: 8px solid var(--dark-blue);
+}
+
+.guide img {
+    border-radius: 50%;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.7);
+}
+    
+    
