--- a/styles.css
+++ b/styles.css
@@ -128,4 +128,30 @@ a {
     padding: 5px 10px;
     border-radius: var(--image);
     background: var(--text);
-    color: var(--background);}
+    color: var(--background);
+}
+
+#solo-project {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 40px 0;
+}
+
+#solo-project a {
+    width: auto;
+    border-radius: var(--image);
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.7);
+    text-align: center;
+    padding: 10px 20px;
+    color: var(--background);
+    text-decoration: none;
+}
+
+#solo-project a:hover {
+    background: var(--dark);
+    color: var(--light);
+    box-shadow: 0 4px 14px rgba(0,0,0,0.8);
+    transform: scale(1.05);
+    transition: all 0.3s ease-in-out;
+}
