--- a/solo-project-hometown/styles.css
+++ b/solo-project-hometown/styles.css
@@ -40,7 +40,7 @@ body {
 }
 
 .hero {
-    background-image: url("https://images.unsplash.com/photo-1553913861-c0fddf2619ee?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+    background-image: url("images/hero-image.webp");
     background-size: cover;
     background-position: center;
     color: white;
